--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="screen-orientation" content="landscape">
   <title>Arrow Game</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
   <script src="//s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin.min.js"></script>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       background: #222;
       overflow: hidden;
-      /* Prevent scrolling if SVG covers whole screen */
     }
 
     svg {
@@ -22,7 +25,6 @@
       top: 0;
       left: 0;
       touch-action: none;
-      /* Prevents default browser touch gestures (like scrolling/zooming) */
     }
 
     span {
@@ -30,11 +32,41 @@
       font-family: sans-serif;
       opacity: .3;
       position: fixed;
-      /* Keep text visible on top */
       top: 20px;
       left: 20px;
       z-index: 10;
-      /* Ensure it's above the SVG */
+    }
+
+    .app-footer {
+      position: fixed;
+      bottom: 100px;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.7);
+      z-index: 5;
+      text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+      padding: 0 10px;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 400;
+    }
+
+    .app-footer p {
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 5px;
+      height: auto;
+    }
+
+    .app-footer .coffee-icon {
+      position: inherit;
+      font-size: 18px;
+      color: rgba(255, 255, 255, 0.8);
+      line-height: 1;
+      transform: translateY(1px);
     }
   </style>
 </head>
@@ -107,48 +139,42 @@
   </svg>
   <span>Draw back an arrow and launch it!</span>
 
+  <footer class="app-footer">
+    <p>Created By Rajveer Gurjar with the help of <span class="material-symbols-outlined coffee-icon">local_cafe</span>
+    </p>
+  </footer>
+
   <script>
-    const shootSound = new Audio('arrow-shoot.mp3');
+    const shootSound = new Audio('assets/arrow-shoot.mp3');
     var svg = document.querySelector("svg");
     var cursor = svg.createSVGPoint();
     var arrows = document.querySelector(".arrows");
     var randomAngle = 0;
-
-
-    let target = { x: 900, y: 249.5 }; // center of target
-    let lineSegment = { // target intersection line segment
+    let target = { x: 900, y: 249.5 };
+    let lineSegment = {
       x1: 875, y1: 280, x2: 925, y2: 220
     };
-    let pivot = { x: 100, y: 250 }; // bow rotation point
-    aim({ clientX: 320, clientY: 300 }); // set up start drag event
-
-    // Use 'pointerdown' for broader compatibility with both mouse and touch
+    let pivot = { x: 100, y: 250 };
+    aim({ clientX: 320, clientY: 300 });
     window.addEventListener("pointerdown", draw);
 
-    function draw(e) { // pull back arrow
-      e.preventDefault(); // Prevent default touch behavior (like scrolling)
-
+    function draw(e) {
+      e.preventDefault();
       randomAngle = Math.random() * Math.PI * 0.03 - 0.015;
       TweenMax.to(".arrow-angle use", 0.3, { opacity: 1 });
-
       window.addEventListener("pointermove", aim);
-      svg.addEventListener("pointerup", loose); // Attached to SVG
+      svg.addEventListener("pointerup", loose);
       aim(e);
     }
 
     function aim(e) {
-      // Using e.clientX and e.clientY directly for pointer events (mouse/touch unified)
       let clientX = e.clientX;
       let clientY = e.clientY;
-
-      // get mouse position in relation to svg position and scale
       var point = getMouseSVG({ clientX, clientY });
-
       point.x = Math.min(point.x, pivot.x - 7);
       point.y = Math.max(point.y, pivot.y + 7);
       var dx = point.x - pivot.x;
       var dy = point.y - pivot.y;
-      // Make it more difficult by adding random angle each time
       var angle = Math.atan2(dy, dx) + randomAngle;
       var bowAngle = angle - Math.PI;
       var distance = Math.min(Math.sqrt(dx * dx + dy * dy), 50);
@@ -172,14 +198,12 @@
             "88,200 " + Math.min(pivot.x - (1 / scale) * distance, 88) + ",250 88,300"
         }
       });
-
       var radius = distance * 9;
       var offset = {
         x: Math.cos(bowAngle) * radius,
         y: Math.sin(bowAngle) * radius
       };
       var arcWidth = offset.x * 3;
-
       TweenMax.to("#arc", 0.3, {
         attr: {
           d:
@@ -200,13 +224,10 @@
     }
 
     function loose() {
-      shootSound.currentTime = 0; // rewind to start
-      shootSound.play()
-      // release arrow
+      shootSound.currentTime = 0;
+      shootSound.play();
       window.removeEventListener("pointermove", aim);
-      svg.removeEventListener("pointerup", loose); // Removed from SVG
-
-
+      svg.removeEventListener("pointerup", loose);
       TweenMax.to("#bow", 0.4, {
         scaleX: 1,
         transformOrigin: "right center",
@@ -218,12 +239,9 @@
         },
         ease: Elastic.easeOut
       });
-      // duplicate arrow
       var newArrow = document.createElementNS("http://www.w3.org/2000/svg", "use");
       newArrow.setAttributeNS("http://www.w3.org/1999/xlink", "href", "#arrow");
       arrows.appendChild(newArrow);
-
-      // animate arrow along path
       var path = MorphSVGPlugin.pathDataToBezier("#arc");
       TweenMax.to([newArrow], 0.5, {
         force3D: true,
@@ -240,14 +258,12 @@
       TweenMax.to("#arc", 0.3, {
         opacity: 0
       });
-      //hide previous arrow
       TweenMax.set(".arrow-angle use", {
         opacity: 0
       });
     }
 
     function hitTest(tween) {
-      // check for collisions with arrow and target
       var arrow = tween.target[0];
       var transform = arrow._gsTransform;
       var radians = (transform.rotation * Math.PI) / 180;
@@ -257,7 +273,6 @@
         x2: Math.cos(radians) * 60 + transform.x,
         y2: Math.sin(radians) * 60 + transform.y
       };
-
       var intersection = getIntersection(arrowSegment, lineSegment);
       if (intersection.segment1 && intersection.segment2) {
         tween.pause();
@@ -273,12 +288,10 @@
     }
 
     function onMiss() {
-      // Damn!
       showMessage(".missyou");
     }
 
     function showMessage(selector) {
-      // handle all text animations by providing selector
       TweenMax.killTweensOf(selector);
       TweenMax.killChildTweensOf(selector);
       TweenMax.set(selector, {
@@ -311,32 +324,23 @@
       );
     }
 
-    // getMouseSVG function (same as previous version)
     function getMouseSVG(e) {
-      const bbox = svg.getBoundingClientRect(); // Get the SVG's position and size in screen coordinates
+      const bbox = svg.getBoundingClientRect();
       const svgX = bbox.left;
       const svgY = bbox.top;
       const svgWidth = bbox.width;
       const svgHeight = bbox.height;
-
-      // Parse viewBox dimensions
       const viewBoxParts = svg.getAttribute('viewBox').split(' ');
       const viewBoxWidth = parseFloat(viewBoxParts[2]);
       const viewBoxHeight = parseFloat(viewBoxParts[3]);
-
-      // Handle potential division by zero if width/height are 0
       const scaleX = svgWidth > 0 ? viewBoxWidth / svgWidth : 0;
       const scaleY = svgHeight > 0 ? viewBoxHeight / svgHeight : 0;
-
-      // Transform client coordinates to SVG viewBox coordinates
       cursor.x = (e.clientX - svgX) * scaleX;
       cursor.y = (e.clientY - svgY) * scaleY;
-
       return cursor;
     }
 
     function getIntersection(segment1, segment2) {
-      // find intersection point of two line segments and whether or not the point is on either line segment
       var dx1 = segment1.x2 - segment1.x1;
       var dy1 = segment1.y2 - segment1.y1;
       var dx2 = segment2.x2 - segment2.x1;
